--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/randomstring": "^1.1.6",
     "@types/uuid": "^8.3.0",
@@ -21,6 +22,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "node-json-db": "^1.3.0",
